# Real-Gas-Simulation

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  main.cpp  makefile
.github/workflows/: workflow.yaml
common/: CMakeLists.txt  gas_structs.h
engine/: CMakeLists.txt  README.md
engine/atoms_list/: .atoms_docpdf.autosave.xopp  CMakeLists.txt  atoms_docpdf.xopp  eng_atoms_list.cpp  eng_atoms_list.h  eng_atoms_list_cfg.h
engine/include/: engine.h  engine_errors_codegen.inc
engine/source/: engine.cpp
flags/: CMakeLists.txt
graphics/: CMakeLists.txt  main.cpp
graphics/include/: graphics.h  graphics_box.h  graphics_cfg.h  graphics_defs.h  graphics_log.h  graphics_shaders.h
graphics/shaders/: box_frag_sh.frag  box_vert_sh.vert  main_frag_sh.frag  main_vert_sh.vert  simple_frag_sh.frag
graphics/source/: graphics.cpp  graphics_log.cpp  graphics_shaders.cpp  main.cpp
libs/debug/: color.h  dbg.h
libs/logs/: Makefile  logs.h
source/: main.cpp
source/common/: CMakeLists.txt
source/common/include/common/: gas_structs.hpp
source/engine/: CMakeLists.txt  atoms_docpdf.xopp
source/engine/include/engine/: eng_atoms_list.hpp  engine.h  engine.hpp
source/engine/source/: eng_atoms_list.cpp  engine.cpp
source/flags/: CMakeLists.txt
source/graphics/: CMakeLists.txt
source/graphics/include/graphics/: config.hpp  gl_log.hpp  graphics.h  graphics.hpp  graphics_box.hpp  graphics_cfg.h  graphics_cfg.hpp  graphics_defs.hpp  graphics_log.h  graphics_log.hpp  graphics_shaders.h  graphics_shaders.hpp  shaders.hpp  vertex.hpp
source/graphics/shaders/: box_frag_sh.frag  main_frag_sh.frag  main_vert_sh.vert
source/graphics/source/: graphics.cpp  graphics_log.cpp  graphics_shaders.cpp  shaders.cpp
source/libs/: CMakeLists.txt
source/libs/debug/: dbg.h  dbg.hpp  lib_config.hpp
source/libs/helpers/: helpers.hpp
source/libs/logs/: logs.cpp  logs.hpp
